--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.8.1
 
+flutter_icons:
+  android: true
+  image_path: "dev_assets/icon.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "dev_assets/icon.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
